--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "eslint-define-config": "^2.1.0",
+    "html2canvas": "^1.4.1",
     "next": "15.1.4",
     "next-auth": "^4.24.10",
     "react": "^19.0.0",
