--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.3.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "canvas": "^3.1.0",
     "eslint-define-config": "^2.1.0",
     "html2canvas": "^1.4.1",
     "next": "15.1.4",
