--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "canvas": "^3.1.0",
     "eslint-define-config": "^2.1.0",
+    "firebase": "^11.10.0",
     "html2canvas": "^1.4.1",
     "next": "15.1.4",
     "next-auth": "^4.24.10",
